-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b115
-
generic
-
generic
-
Verified
if it is shown to be the cause for the regressions in the 2016.03.31 JDK9-hs-rt
nightly.
- duplicates
-
JDK-8153280 sun/tools/jstatd/TestJstatd* tests fail with java.io.IOException: Stream closed and missing headline
-
- Closed
-
-
JDK-8153283 Multiple jstat failures in hs nightly
-
- Closed
-
-
JDK-8153280 sun/tools/jstatd/TestJstatd* tests fail with java.io.IOException: Stream closed and missing headline
-
- Closed
-
-
JDK-8153283 Multiple jstat failures in hs nightly
-
- Closed
-
- relates to
-
JDK-8153280 sun/tools/jstatd/TestJstatd* tests fail with java.io.IOException: Stream closed and missing headline
-
- Closed
-
-
JDK-8153283 Multiple jstat failures in hs nightly
-
- Closed
-
-
JDK-8153333 [REDO] STW phases at Concurrent GC should count in PerfCounter
-
- Resolved
-
-
JDK-8151674 STW phases at Concurrent GC should count in PerfCounter
-
- Closed
-