8153302: [BACKOUT] STW phases at Concurrent GC should count in PerfCounter

Reviewed-by: jmasa, jwilhelm