hotspot/src/share/vm/gc/cms/concurrentMarkSweepGeneration.hpp
@@ -555,7 +555,6 @@ class CMSCollector: public CHeapObj<mtGC> {
 
   // Performance Counters
   CollectorCounters* _gc_counters;
-  CollectorCounters* _cgc_counters;
 
   // Initialization Errors
   bool _completed_initialization;
@@ -930,8 +929,7 @@ class CMSCollector: public CHeapObj<mtGC> {
   NOT_PRODUCT(bool is_cms_reachable(HeapWord* addr);)
 
   // Performance Counter Support
-  CollectorCounters* counters()     { return _gc_counters; }
-  CollectorCounters* cgc_counters() { return _cgc_counters; }
+  CollectorCounters* counters()    { return _gc_counters; }
 
   // Timer stuff
   void    startTimer() { assert(!_timer.is_active(), "Error"); _timer.start();   }
